# 06_automated_scientific_intelligence_reporting_system

./: README.md  pyproject.toml
docs/: milestone_2026-03-02.md
src/narrative/: executive_summary.py
src/parsers/: pipeline_output.py
templates/executive/: summary_template.md
tests/: test_reporting.py
